Only automatically promote scrollers which are untransformed and opaque.

To be sure that we actually get LCD text, we only promote scrollers which have
not been transformed themselves or by any ancestor, and also exclude those
which are translucent due to an opacity on themselves or an ancestor.

BUG=644833
TEST=PaintLayerScrollableAreaTest.OnlyNonTransformedOpaqueLayersPromoted, PaintLayerScrollableAreaTest.OnlyOpaqueLayersPromoted
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2

Review-Url: https://chromiumcodereview.appspot.com/2434443005
Cr-Commit-Position: refs/heads/master@{#426385}

Former-commit-id: c656b155c2f6fb63288a259d130dd06dca393925